--- a/broker-a/broker-a-s.conf
+++ b/broker-a/broker-a-s.conf
@@ -1,4 +1,4 @@
-namesrvAddr=192.168.20.2:9876;192.168.20.2:9877
+namesrvAddr=rmqnamesrv-a:9876;rmqnamesrv-b:9876
 brokerClusterName=DefaultCluster
 brokerName=broker-a
 brokerId=1
